# 2Term_OAiP

./: README.md  sonar-project.properties
.github/workflows/: build.yml
1 - listing/: CMakeLists.txt  compile_commands.json  get.c  get.h  main.c  tasks.c  tasks.h
2 - archiver/: CMakeLists.txt  bookpart.txt  compile_commands.json  compressed.txt  functions.c  functions.h  word.h
2 - archiver/compress/: compress.c
2 - archiver/decompress/: decompress.c
3 - BMPeditor/: CMakeLists.txt  bmp.h  bmpEdit.c  bmpEdit.h  bmpReadWrite.c  bmpReadWrite.h  compile_commands.json  get.c  get.h  main.c
4 - akinator/: CMakeLists.txt  compile_commands.json  funcs.c  funcs.h  get.c  get.h  libr.txt  main.c  struct.h
5 - DNS searcher/: CMakeLists.txt  cache.h  compile_commands.json  dns.txt  functions.c  functions.h  main.c
